@startuml
skinparam classAttributeIconSize 0

abstract Plate{
~makePlate():void
~meatWanted():boolean
~sidesWanted():boolean
~vegWanted():boolean
~servePlate():void
}

class HungryPlate{
~addMeat():void
~addSides():void
~addVeg():void
}

class PickyPlate{
~addMeat():void
~addSides():void
~addVeg():void
}

Plate <-- HungryPlate
Plate <-- PickyPlate
Plate -- PlateMaker



@enduml